==> ChibiOS/ChibiOS/os/hal/platforms/Rx62n/usb_lld.c <==
#include "ch.h"
#include "hal.h"

static void usb_packet_read_to_buffer(USBDriver *usbp, usbep_t ep,
                                      uint8_t *buf, size_t n) {
  uint32_t i;

  usbp->epc[ep]->in_state->transmitted = n;
  if (ep == 0) {
    for (i = 0; i < n; i++)
      usbp->epc[ep]->out_state->mode.linear.rxbuf[i] = usbp->usb->CFIFO.BYTE.L;
  }
  else {
    for (i = 0; i < n; i++)
      usbp->epc[ep]->out_state->mode.linear.rxbuf[i] = usbp->usb->D0FIFO.BYTE.L;
  }
}

static void usb_packet_read_to_queue(USBDriver *usbp, usbep_t ep, InputQueue *iqp, size_t n) {
  size_t nhw = n;
  uint8_t c;

  while (nhw > 0) {
    if (ep == 0) {
        c = usbp->usb->CFIFO.BYTE.L;
    }
	else {
        /* ep 1..9 */
        c = usbp->usb->D0FIFO.BYTE.L;;
    }
    *iqp->q_wrptr++ = c;
    if (iqp->q_wrptr >= iqp->q_top)
      iqp->q_wrptr = iqp->q_buffer;
    nhw--;
  }

  /* Updating queue.*/
  chSysLockFromIsr();
  iqp->q_counter += n;
  while (notempty(&iqp->q_waiting))
    chSchReadyI(fifo_remove(&iqp->q_waiting))->p_u.rdymsg = Q_OK;
  chSysUnlockFromIsr();
}

static void usb_packet_write_from_buffer(USBDriver *usbp, usbep_t ep,
                                         const uint8_t *buf, size_t n) {

  usbp->epc[ep]->in_state->transmitted = n;
  if (ep == 0) {
    while (n--) {
      usbp->usb->CFIFO.BYTE.L = *buf++;
    }
  }
  else {
    /* ep 1..9 */
    usbp->usb->D1FIFO.BYTE.L = *buf++;
  }
}

static void usb_packet_write_from_queue(USBDriver *usbp, usbep_t ep,
                                        OutputQueue *oqp, size_t n) {
  size_t nhw = n;
  uint8_t c;

  usbp->epc[ep]->in_state->transmitted = n;
  while (nhw > 0) {
    c = *oqp->q_rdptr++;;
    if (ep == 0) {
      usbp->usb->CFIFO.BYTE.L = c;
    }
	else {
      /* ep 1..9 */
      usbp->usb->D1FIFO.BYTE.L = c;
    }
    c = c;
    if (oqp->q_rdptr >= oqp->q_top)
      oqp->q_rdptr = oqp->q_buffer;
    nhw--;
  }

  /* Updating queue. Note, the lock is done in this unusual way because this
     function can be called from both ISR and thread context so the kind
     of lock function to be invoked cannot be decided beforehand.*/

  /*
    TODO: port_lock() doesn't work.*/
  if (port_enabled()) {
    dbg_enter_lock();
    chSysLock();

    oqp->q_counter += n;
    while (notempty(&oqp->q_waiting))
      chSchReadyI(fifo_remove(&oqp->q_waiting))->p_u.rdymsg = Q_OK;

    chSysUnlock();
    dbg_leave_lock();
  }
  else {
    oqp->q_counter += n;
    while (notempty(&oqp->q_waiting))
      chSchReadyI(fifo_remove(&oqp->q_waiting))->p_u.rdymsg = Q_OK;
  }
}

void usb_lld_start(USBDriver *usbp) {

  if (usbp->state == USB_STOP) {
    /* Enable USB peripheral. */
    if (usbp == &USBD1) {
      MSTP(USB0) = 0;
      /* Enable GPIO Pull-up */
      PORT1.DDR.BIT.B4 = 1;
      /* Enable USB0 pins functions */
      IOPORT.PFKUSB.BYTE = 0x14;
    }
    /* USB clock activation. */
    usbp->usb->SYSCFG.BIT.SCKE = 1;
    /* Select function. */
    usbp->usb->SYSCFG.BIT.DCFM = 0;
    /* Enable module operation. */
    usbp->usb->SYSCFG.BIT.USBE = 1;

    /* Default as powered state */
    usbp->last_dvst = 0;
    /* Default as idle stage */
    usbp->last_ctsq = 0;
    /* Current FIFO */
    usbp->current_fifo = 0;

    /* Reset procedure enforced on driver start.*/
    _usb_reset(usbp);
  }
  /* Configuration.*/
}

void usb_lld_stop(USBDriver *usbp) {

  /* If in ready state then disables the USB clock.*/
  if (usbp->state != USB_STOP) {
/*    IEN(USB0,USBI0) = 0;*/
    /* Disable module operation. */
    usbp->usb->SYSCFG.BIT.USBE = 0;
    /* Disable USB clock.*/
    usbp->usb->SYSCFG.BIT.SCKE = 0;
    /* Disable USB peripheral.*/
    if (usbp == &USBD1) {
      MSTP(USB0) = 1;
    }
  }
}

void usb_lld_reset(USBDriver *usbp) {
  uint16_t ien = 0;

  if (usbp == &USBD1) {
    IEN(USB0,USBI0) = 0;
  }
  /* Disable interrupts */
  usbp->usb->INTENB0.WORD = 0;
  usbp->usb->INTENB1.WORD = 0;
  usbp->usb->BRDYENB.WORD = 0;
  usbp->usb->NRDYENB.WORD = 0;
  usbp->usb->BEMPENB.WORD = 0;
  /* Clear interrupt status bits */
  usbp->usb->INTSTS0.WORD = (uint16_t)(~(INTSTS0_VALID|INTSTS0_BRDY|
    INTSTS0_BEMP|INTSTS0_CTRT|INTSTS0_DVST|INTSTS0_SOFR|INTSTS0_RESM|
    INTSTS0_VBINT));
  usbp->usb->INTSTS1.WORD = (uint16_t)(~((1<<4)|(1<<5)|(1<<6)|(1<<11)|(1<<12)|
    (1<<14)|(1<<15)));

  if (usbp->config->sof_cb != NULL) {
    ien = INTENB0_SOFE;
  }

  /* EP0 initialization.*/
  usbp->epc[0] = &ep0config;
  usbp->usb->DCPCFG.WORD = 0;
  usbp->usb->DCPMAXP.WORD = USB_EP0_PACKET_SIZE;
  usbp->usb->CFIFOSEL.WORD = 0;

  /* Enable the USB interrupts - other interrupts get enabled as the
  enumeration process progresses. */
  if (usbp == &USBD1) {
    IEN(USB0,USBI0) = 1;
    IPR(USB0,USBI0) = RX62N_USB0_IRQ_PRIORITY;
  }
  usbp->usb->INTENB0.WORD =
    INTENB0_BRDYE|
    INTENB0_BEMPE|
    INTENB0_CTRE|
    INTENB0_DVSE|
    INTENB0_RSME|
    ien|
    0;
  usbp->usb->BRDYENB.BIT.PIPE0BRDYE = 1;
  usbp->usb->BEMPENB.BIT.PIPE0BEMPE = 1;
}

void usb_lld_init_endpoint(USBDriver *usbp, usbep_t ep) {
  uint16_t pipecfg;
  const USBEndpointConfig *epcp = usbp->epc[ep];

  chDbgAssert(ep > 0, "usb_lld_init_endpoint(), #1", "invalid endpoint");
  if (ep == 0)
    return;

/*  usbp->usb->CFIFOSEL.BIT.CURPIPE = 0;*/
  usbp->usb->PIPESEL.WORD = ep;

  /* Set PID to NAK */
  usb_pipectr_write(usbp, ep, 0);
  while (usb_pipectr_read(usbp, ep).BIT.PBUSY);
  usb_pipectr_write(usbp, ep, PIPECTR_SQCLR|PIPECTR_ACLRM);
  usb_pipectr_write(usbp, ep, 0);
/*
  if (epcp->out_cb != NULL)
    epcp->out_state->currentBank = 0;
*/
  /* Setting the endpoint type.*/
  switch (epcp->ep_mode & USB_EP_MODE_TYPE) {
  case USB_EP_MODE_TYPE_ISOC:
    pipecfg = PIPECFG_TYPE_ISO;
    break;
  case USB_EP_MODE_TYPE_BULK:
    pipecfg = PIPECFG_TYPE_BULK;
    break;
  case USB_EP_MODE_TYPE_INTR:
    pipecfg = PIPECFG_TYPE_INT;
    break;
  default:
    /* No control type allowed */
    chDbgAssert((epcp->ep_mode & USB_EP_MODE_TYPE) != USB_EP_MODE_TYPE_CTRL,
      "usb_lld_init_endpoint(), #2", "invalid endpoint");
    return;
  }

  /* Set direction */
  if (epcp->in_cb != NULL) {
    usbp->usb->PIPEMAXP.BIT.MXPS = epcp->in_maxsize;
    pipecfg |= PIPECFG_DIR_IN;
  }
  else {
    usbp->usb->PIPEMAXP.BIT.MXPS = epcp->out_maxsize;
    pipecfg |= PIPECFG_DIR_OUT;
  }
  pipecfg |= ep;
  usbp->usb->PIPECFG.WORD = pipecfg;

  /* Clear interrupt status flag */
  usbp->usb->BRDYSTS.WORD &= ~(1<<ep);
  /* Enable interrupts */
  usbp->usb->BRDYENB.WORD |= (1<<ep);

  usbp->usb->PIPESEL.WORD = 0;
}

void usb_lld_disable_endpoints(USBDriver *usbp) {
  usbep_t i;

  /* Disable endpoints interrupt */
  usbp->usb->BRDYENB.WORD = 1;
  usbp->usb->BRDYSTS.WORD = ~1;
  /* Disable endpoints */
  for (i=0; i<USB_MAX_ENDPOINTS; i++) {
    usbp->usb->PIPESEL.WORD = i+1;
    usbp->usb->PIPECFG.BIT.EPNUM = 0;
  }
  usbp->usb->PIPESEL.WORD = 0;
  /* Clear FIFO */
}

usbepstatus_t usb_lld_get_status_out(USBDriver *usbp, usbep_t ep) {
  usbep_t epPrev = usbp->usb->PIPESEL.BIT.PIPESEL;

  if (ep == 0)
    return EP_STATUS_ACTIVE;
  usbp->usb->PIPESEL.BIT.PIPESEL = ep;
  usbep_t epNum = usbp->usb->PIPECFG.BIT.EPNUM;
  usbp->usb->PIPESEL.BIT.PIPESEL = epPrev;
  if (epNum) {
    if (usb_pipectr_read(usbp, ep).BIT.PID & 2)
      return EP_STATUS_STALLED;
  }
  return EP_STATUS_DISABLED;
}

void usb_lld_read_setup(USBDriver *usbp, usbep_t ep, uint8_t *buf) {

  buf[0] = usbp->usb->USBREQ.WORD & 0xFF;
  buf[1] = (usbp->usb->USBREQ.WORD >> 8) & 0xFF;
  buf[2] = usbp->usb->USBVAL & 0xFF;
  buf[3] = (usbp->usb->USBVAL >> 8) & 0xFF;
  buf[4] = usbp->usb->USBINDX & 0xFF;
  buf[5] = (usbp->usb->USBINDX >> 8) & 0xFF;
  buf[6] = usbp->usb->USBLENG & 0xFF;
  buf[7] = (usbp->usb->USBLENG >> 8) & 0xFF;
}

void usb_lld_start_out(USBDriver *usbp, usbep_t ep) {

  if (ep)
    usb_pipectr_write(usbp, ep, PID_BUF);
}

void usb_lld_start_in(USBDriver *usbp, usbep_t ep) {

  if (ep == 0) {
    if (usbp->epc[ep]->in_state->transmitted < usbp->epc[ep]->in_maxsize)
      usbp->usb->CFIFOCTR.BIT.BVAL = 1;
  }
  else {
    if (usbp->epc[ep]->in_state->transmitted < usbp->epc[ep]->in_maxsize)
      usbp->usb->D1FIFOCTR.BIT.BVAL = 1;
  }
}

void usb_lld_stall_out(USBDriver *usbp, usbep_t ep) {

  if (ep == 0) {
    if (usbp->usb->DCPCTR.BIT.PID == PID_NAK)
      usbp->usb->DCPCTR.BIT.PID = PID_STALL10;
    else
      usbp->usb->DCPCTR.BIT.PID = PID_STALL11;
  }
  else {
    if ( usb_pipectr_read(usbp, ep).BIT.PID == PID_NAK)
      usb_pipectr_write(usbp, ep, PID_STALL10);
    else
      usb_pipectr_write(usbp, ep, PID_STALL11);
  }
}

void usb_lld_clear_out(USBDriver *usbp, usbep_t ep) {

  if (ep == 0) {
    if (usbp->usb->DCPCTR.BIT.PID == PID_STALL11)
      usbp->usb->DCPCTR.BIT.PID = PID_STALL10;
    usbp->usb->DCPCTR.BIT.PID = PID_NAK;
  }
  else {
    if ( usb_pipectr_read(usbp, ep).BIT.PID == PID_STALL11)
        usb_pipectr_write(usbp, ep, PID_STALL10);
    usb_pipectr_write(usbp, ep, PID_NAK);
  }
}
